Replaced new Long() and new Double()